# Theia

./: .gitignore  CMakeLists.txt  NoamTheia.code-workspace  README.md  clean.sh  install.sh  setupTheia.sh
BSMCalorimeter/: README
Cherenkov/: README
Common/ConfigReader/source/: CMakeLists.txt
Common/ConfigReader/source/ConfigReader/: ConfigReader.h  ConfigReader_LinkDef.h
Common/ConfigReader/source/src/: ConfigReader.cxx
Common/Logger/source/: CMakeLists.txt
Common/Logger/source/Logger/: LUXELog.h  LUXELog_LinkDef.h
Common/Logger/source/src/: LUXELog.cxx
Common/Magnets/source/: CMakeLists.txt
Common/Magnets/source/Magnets/: Magnets.h  Magnets_LinkDef.h  Utils.h
Common/Magnets/source/src/: Magnets.cxx  Utils.cxx
Common/Particles/source/: CMakeLists.txt
Common/Particles/source/Particles/: LUXEUtility.h  Particles.h  Particles_LinkDef.h
Common/Particles/source/src/: Particles.cxx
Common/Plotting/source/: CMakeLists.txt
Common/Plotting/source/Plotting/: MakeHists.h
Common/Plotting/source/src/: MakeHists.cxx
Examples/: README
Executables/source/: CMakeLists.txt
Executables/source/Executables/Root/: Digitization.cxx  Executables_LinkDef.h  Reconstruction.cxx
Executables/source/Executables/data/root/dig/: dig_trident_.root
Executables/source/Executables/output/root/: bppp_tracks_pm3d_truth.root  trident_tracks_pl3d_truth.root  trident_tracks_pm3d_truth.root
Executables/source/Executables/setup/: setupLUXE_trident.txt
IPCalorimeter/: README
Profiler/: README
Scintillator/: README
Tracker/: .gitkeep
Tracker/source/: CMakeLists.txt
Tracker/source/Root/: Digitization.cxx  Reconstruction.cxx
Tracker/source/Tracker/: Cluster.h  Detector.h  DrawProbe.h  Layer.h  Material.h  Probe.h  TTreeStream.h  TrackParameter.h  Tracker.h  Tracker_LinkDef.h  TrkDetector.h  TrkLayer.h  TrkProbe.h
Tracker/source/data/root/: bppp_geometry_truth.root  trident_geometry_truth.root
Tracker/source/src/: Cluster.cxx  Detector.cxx  DrawProbe.cxx  Layer.cxx  Material.cxx  Probe.cxx  TTreeStream.cxx  TrackParameter.cxx  Tracker.cxx  TrkDetector.cxx  TrkLayer.cxx  TrkProbe.cxx
